# holdcrpyt

./: Cargo.toml  output.json  samconfig.toml  template.yaml
.aws-sam/: build.toml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs
frontend/src/: App.svelte  store.ts
frontend/src/pages/: contact.svelte  demo.svelte  development.svelte  header.svelte  landing.svelte  notfound.svelte
frontend/src/svgs/: Logo.svelte
frontend/src/svgs/coins/: bitcoin.svelte  cardano.svelte  ethereum.svelte
src/: errors.rs  lib.rs  res.rs
src/types/: binance.rs  coin.rs  mod.rs  transaction.rs  user.rs
