[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
lambda_http = "0.5.1"
lambda_runtime = "0.5.1"
log = "0.4.16"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
simple_logger = "2.1.0"
tokio = { version = "1.17.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4"] }
# aws-config = "0.9.0"
# aws-sdk-dynamodb = "0.9.0"
# tokio = { version = "1.17.0", features = ["full"] }
# serde = { version = "1.0.136", features = ["derive"] }
# serde_json = "1.0.79"
# log = "0.4.16"
# lambda_runtime = "0.5.1"
# simple_logger = "2.1.0"
# uuid = { version = "0.8.2", features = ["v4"] }

# [[bin]]
# name = "hello_name"

# [[bin]]
# name = "hello"

# [[bin]]
# name = "add_user"
