[package]
name = "holdcrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
http = "0.2.6"
lambda_http = "0.5.1"
lambda_runtime = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
uuid = { version = "0.8.2", features = ["v4"] }


[[bin]]
name = "add_user"
path = "src/bin/user/add_user.rs"
