[package]
name = "holdcrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.9.0"
aws-sdk-dynamodb = "0.9.0"
http = "0.2.6"
lambda_http = "0.5.1"
lambda_runtime = "0.5.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.reqwest]
version = "0.9"
# This stops reqwest from using local openssl implementation
default-features = false
features = ["rustls-tls"]


[[bin]]
name = "users_put"
path = "src/bin/users/put.rs"

[[bin]]
name = "users_get"
path = "src/bin/users/get.rs"

[[bin]]
name = "transactions_post"
path = "src/bin/transactions/post.rs"

[[bin]]
name = "coins_get"
path = "src/bin/coins/get.rs"

[[bin]]
name = "coins_put"
path = "src/bin/coins/put.rs"
